--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd config/dev.env nodemon src/index.js"
+    "dev": "env-cmd config/dev.env nodemon src/index.js",
+    "test": "env-cmd config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +27,8 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "env-cmd": "^8.0.2"
+    "env-cmd": "^8.0.2",
+    "jest": "^24.5.0",
+    "supertest": "^4.0.2"
   }
 }
